setting grid for central section

--- a/public/index.html
+++ b/public/index.html
@@ -24,28 +24,28 @@
     </header>
   
     <section id="qualities">
-      <div>
+      <div class="box">
         <h2></h2>
         <p></p>
         <a></a>
       </div>
-      <div>
+      <div class="box">
         <img/>
       </div>
-      <div>
+      <div class="box">
         <img/>
       </div>
-      <div>
+      <div class="box">
         <h2></h2>
         <p></p>
         <a></a>
       </div>
-      <div>
+      <div class="box">
         <img/>
         <h3></h3>
         <p></p>
       </div>
-      <div>
+      <div class="box">
         <img/>
         <h4></h4>
         <p></p>
