grid finished adding font navbar done

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,28 @@
   
   <title>Sunnyside</title>
   <link href="styles.css" rel="stylesheet" type="text/css" media="screen"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Fraunces:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@800&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header>
       <nav>
-        <img/>
+        <img src="../images/logo.svg" />
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+          <li>
+            <a href="#" class="contact-btn">Contact</a>
+          </li>
         </ul>
       </nav>
       <h1>WE ARE CREATIVES</h1>
@@ -25,7 +37,7 @@
   
     <section id="qualities">
       <div class="box">
-        <h2></h2>
+        <h2>Transform your brand</h2>
         <p></p>
         <a></a>
       </div>
@@ -41,14 +53,18 @@
         <a></a>
       </div>
       <div class="box">
-        <img/>
-        <h3></h3>
-        <p></p>
+        <div class="text-box">
+          <h3>Graphic Design</h3>
+          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+          </p>
+        </div>
       </div>
       <div class="box">
-        <img/>
-        <h4></h4>
-        <p></p>
+        <div class="text-box">
+          <h3>Photography</h3>
+          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+          </p>
+        </div>
       </div>
     </section>
   
