--- a/public/index.html
+++ b/public/index.html
@@ -37,20 +37,25 @@
   
     <section id="qualities">
       <div class="box">
-        <h2>Transform your brand</h2>
-        <p></p>
-        <a></a>
+        <div class="info-box">
+          <h2>Transform your <br/> brand</h2>
+          <p>We are a full-service creative agency specializing in <br/> helping brands grow fast. 
+            Engage your clients through <br/> compelling visuals that do most of the marketing for you.
+          </p>
+          <a>LEARN MORE</a>
+        </div>
       </div>
       <div class="box">
-        <img/>
       </div>
       <div class="box">
-        <img/>
       </div>
       <div class="box">
-        <h2></h2>
-        <p></p>
-        <a></a>
+        <div class="info-box">
+          <h2>Stand out to the right audience</h2>
+          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+          </p>
+          <a>LEARN MORE</a>
+        </div>
       </div>
       <div class="box">
         <div class="text-box">
