doing testimonials section

--- a/public/index.html
+++ b/public/index.html
@@ -74,24 +74,26 @@
     </section>
   
     <section id="testimonials">
-      <h3></h3>
-      <div>
-        <img/>
-        <p></p>
-        <p><span></span></p>
-        <p></p>
-      </div>
-      <div>
-        <img/>
-        <p></p>
-        <p><span></span></p>
-        <p></p>
-      </div>
-      <div>
-        <img/>
-        <p></p>
-        <p><span></span></p>
-        <p></p>
+      <h3>CLIENT TESTIMONIALS</h3>
+      <div class="testimonials-container">
+        <div class="testimonial-box">
+          <img src="../images/image-emily.jpg"/>
+          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <p><span>Emily R.</span></p>
+          <p>Marketing Director</p>
+        </div>
+        <div class="testimonial-box">
+          <img src="../images/image-thomas.jpg"/>
+          <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <p><span>Thomas S.</span></p>
+          <p>Chief Operating Officer</p>
+        </div>
+        <div class="testimonial-box">
+          <img src="../images/image-jennie.jpg"/>
+          <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <p><span>Jennie F.</span></p>
+          <p>Business Owner</p>
+        </div>
       </div>
     </section>
   
