--- a/public/index.html
+++ b/public/index.html
@@ -78,38 +78,30 @@
       <div class="testimonials-container">
         <div class="testimonial-box">
           <img src="../images/image-emily.jpg"/>
-          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <p class="testimonial-description">We put our trust in Sunnyside and they <br/> delivered, making sure our needs were met <br/> and deadlines were always hit.</p>
           <p><span>Emily R.</span></p>
-          <p>Marketing Director</p>
+          <p class="occupation">Marketing Director</p>
         </div>
         <div class="testimonial-box">
           <img src="../images/image-thomas.jpg"/>
-          <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <p class="testimonial-description">Sunnyside’s enthusiasm coupled with their <br/> keen interest in our brand’s success made it <br/> a satisfying and enjoyable experience.</p>
           <p><span>Thomas S.</span></p>
-          <p>Chief Operating Officer</p>
+          <p class="occupation">Chief Operating Officer</p>
         </div>
         <div class="testimonial-box">
           <img src="../images/image-jennie.jpg"/>
-          <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <p class="testimonial-description">Incredible end result! Our sales increased <br/> over 400% when we worked with Sunnyside. <br/> Highly recommended!</p>
           <p><span>Jennie F.</span></p>
-          <p>Business Owner</p>
+          <p class="occupation">Business Owner</p>
         </div>
       </div>
     </section>
   
-    <section>
-      <div>
-        <img/>
-      </div>
-      <div>
-        <img/>
-      </div>
-      <div>
-        <img/>
-      </div>
-      <div>
-        <img/>
-      </div>
+    <section id="gallery">
+      <img src="../images/image-gallery-milkbottles.jpg"/>
+      <img src="../images/image-gallery-orange.jpg"/>
+      <img src="../images/image-gallery-cone.jpg"/>
+      <img src="../images/image-gallery-sugarcubes.jpg"/>
     </section>
   
     <footer>
