--- a/public/index.html
+++ b/public/index.html
@@ -104,18 +104,18 @@
       <img src="../images/image-gallery-sugarcubes.jpg"/>
     </section>
   
-    <footer>
-      <img/>
-      <div>
-        <h4></h4>
-        <h4></h4>
-        <h4></h4>
+    <footer id="footer">
+      <img src="../images/logo2.svg"/>
+      <div class="footer-links">
+        <h4>About</h4>
+        <h4>Services</h4>
+        <h4>Projects</h4>
       </div>
-      <div>
-        <img/>
-        <img/>
-        <img/>
-        <img/>
+      <div class="footer-icons">
+        <img src="../images/icon-facebook.svg" />
+        <img src="../images/icon-instagram.svg" />
+        <img src="../images/icon-twitter.svg" />
+        <img src="../images/icon-pinterest.svg" />
       </div>
     </footer>
 </body>
