--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         </ul>
       </nav>
       <h1>WE ARE CREATIVES</h1>
+      <img src="../images/icon-arrow-down.svg"/>
     </header>
   
     <section id="qualities">
